--- a/ReverseProxy/Properties/launchSettings.json
+++ b/ReverseProxy/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:3000",
+//      "applicationUrl": "http://localhost:3000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:3030;http://localhost:3000",
+//      "applicationUrl": "https://localhost:3030",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
