--- a/ReverseProxy/ReverseProxy.csproj
+++ b/ReverseProxy/ReverseProxy.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Aspire.Hosting" Version="9.0.0" />
       <PackageReference Include="Yarp.ReverseProxy" Version="2.2.0" />
     </ItemGroup>
 
