--- a/ReplicaSet.Host/ReplicaSet.Host.csproj
+++ b/ReplicaSet.Host/ReplicaSet.Host.csproj
@@ -7,6 +7,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsAspireHost>true</IsAspireHost>
+        <RootNamespace>ContainerReplicaSet.Host</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
