--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ValkeyCluster.Host\ValkeyCluster.Host.csproj" IsAspireProjectResource="false" />
       <ProjectReference Include="..\ReplicaSet.Host\ReplicaSet.Host.csproj" IsAspireProjectResource="false" />
       <ProjectReference Include="..\ReverseProxy.Host\ReverseProxy.Host.csproj" IsAspireProjectResource="false" />
     </ItemGroup>
